[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/ball/Ball.gd" type="Script" id=1]
[ext_resource path="res://assets/imported/snowball_fin.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/ball/SetPickable.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=3]
friction = 10.0
rough = true
bounce = 0.05

[sub_resource type="SphereShape" id=2]
margin = 0.1
radius = 0.1

[sub_resource type="SphereShape" id=5]

[sub_resource type="SphereMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.501961 )

[node name="Ball" type="RigidBody"]
collision_layer = 0
mass = 34.95
physics_material_override = SubResource( 3 )
contacts_reported = 153
contact_monitor = true
angular_damp = 1.0
script = ExtResource( 1 )

[node name="snowball" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="CameraRig" type="Position3D" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraRig"]
transform = Transform( 20, 0, 0, 0, 17.3205, 10, 0, -10, 17.3205, 0, 5.85, 6.489 )
current = true
far = 2296.9

[node name="GroundCheck" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="PickableDecider" type="Area" parent="."]
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="PickableDecider"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false
shape = SubResource( 5 )

[node name="MeshInstanceForDebugging" type="MeshInstance" parent="PickableDecider"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false
mesh = SubResource( 6 )
material/0 = SubResource( 7 )
